# plinalg

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test.py
lib/include/: hermitian_kernel.h  kernel_helpers.h  kernel_nanobind_helpers.h
lib/src/: hermitian_kernel.cc  hermitian_kernel.cc.cu  plinalg.cc  test.cc.cu
output/: check-repv100-multi.out  err.txt  output.txt  output2.txt  output_with_hlo.txt  output_with_propa.txt  output_without_hlo.txt  v100-multi.err  v100-multi.out  v100-one-GPU.err  v100-one-GPU.out
plinalg/: cg.py  debug_tools.py  hermitian.py  truc.py  utils.py
slurms/: README.md  a100-multi-controller.slurm  a100-single-controller.slurm  v100-multi-controller.slurm  v100-one-gpu.slurm  v100-single-controller.slurm  v100-spmd.slurm
tests/: test_primitive.py  test_spmd_lowering.py
